--- a/fdlb_front/src/App.css
+++ b/fdlb_front/src/App.css
@@ -1,24 +1,37 @@
+@import '~antd/dist/antd.css';
+
 .App {
-  text-align: center;
+    text-align: left;
+    background: #f1f1f1;
+    width: 100vw;
+    height: 100vh;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
+}
+
+.Main-page-card{
+    padding: 4px;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
