add link to snippets

--- a/fdlb_front/src/home/App.css
+++ b/fdlb_front/src/home/App.css
@@ -1,10 +1,7 @@
-@import '~antd/dist/antd.css';
+@import '../../node_modules/antd/dist/antd.css';
 
 .App {
     text-align: left;
-    background: #f1f1f1;
-    width: 100vw;
-    height: 100vh;
 }
 
 .App-logo {
