--- a/fdlb_front/src/index.css
+++ b/fdlb_front/src/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
-  padding: 0px;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0px;
+    font-family: sans-serif;
+    background: #f1f1f1;
+    width: 100vw;
+    height: 100vh;
 }
